--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,10 +1,5 @@
 pipeline {
-  agent {
-    docker {
-     #image 'algabrizaid/maven-opa-docker-agent'
-      #args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
-    }
-  }
+  agent any
   stages {
     
     stage('Build and Test') {
