Update JenkinsFile maven

--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,6 +1,10 @@
 pipeline {
   agent any
   stages {
+
+      environment {
+        PATH = "${tool 'Maven'}/bin:${env.PATH}"
+    }
     
     stage('Build and Test') {
       steps {
