--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -47,6 +47,11 @@ pipeline {
         }
         steps {
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                 script {
+                // Checkout the branch (assuming it's 'main' - adjust if necessary)
+                sh 'git checkout main'
+
+                // Update the deployment file with the new image tag
                 sh '''
                     git config user.email "zaidgabri976@gmail.com"
                     git config user.name "zaidgabri"
@@ -54,8 +59,19 @@ pipeline {
                     sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                     git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                     git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-                    git push https://github.com/zaidgabri/java-maven-sonar-argocd-helm-k8s.git 
+                    git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} main
                 '''
+            }
+              
+                // sh '''
+                //     git config user.email "zaidgabri976@gmail.com"
+                //     git config user.name "zaidgabri"
+                //     BUILD_NUMBER=${BUILD_NUMBER}
+                //     sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                //     git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                //     git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+                // //     git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                // '''
             }
         }
     }
