--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -66,7 +66,7 @@ pipeline {
                     
                     def newImageLine = "image: ${registryName}:${imageTag}"
             
-                    sh "sed -i 's|image: algabrizaid/maven-opa-docker-agent:${newImageLine}|' ${manifestsDir}/api-deployment.yml"
+                    sh "sed -i 's|image: algabrizaid/maven-opa-docker-agent:${newImageLine}|' ${manifestsDir}/deployment.yml"
         
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
 
