--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -4,7 +4,7 @@ pipeline {
 
    environment {
         PATH = "${tool 'Maven'}/bin:${env.PATH}"
-       registryName = 'algabrizaid/maven-opa-docker-agent'
+        registryName = 'algabrizaid/maven-opa-docker-agent'
          imageTag = "latest-${BUILD_NUMBER}"
     }
   stages {
@@ -44,64 +44,70 @@ pipeline {
         }
       }
     }
+
+
+    
     stage('Update Deployment File') {
         environment {
             GIT_REPO_NAME = "java-maven-sonar-argocd-helm-k8s"
             GIT_USER_NAME = "zaidgabri"
         }
-        steps {
-            withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-                sh '''
-                    git config user.email "zaidgabri976@gmail.com"
-                    git config user.name "zaidgabri"
-                    BUILD_NUMBER=${imageTag}
-                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                    git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                    git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-                    git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-                '''
-            }
-        }
-    }
-
-
-
-
-  //   stage('Update Deployment File') {
-  //       environment {
-  //           GIT_REPO_NAME = "java-maven-sonar-argocd-helm-k8s"
-  //           GIT_USER_NAME = "zaidgabri"
-  //       }
-  //  steps {
-  //               script {
+   steps {
+                script {
                   
-  //                   def cloneDir = 'java-maven-sonar-argocd-helm-k8s'
+                    def cloneDir = 'java-maven-sonar-argocd-helm-k8s'
 
                   
-  //                   if (!fileExists(cloneDir)) {
-  //                       sh "git clone https://github.com/zaidgabri/java-maven-sonar-argocd-helm-k8s.git ${cloneDir}"
-  //                   }
+                    if (!fileExists(cloneDir)) {
+                        sh "git clone https://github.com/zaidgabri/java-maven-sonar-argocd-helm-k8s.git ${cloneDir}"
+                    }
 
                    
-  //                   def manifestsDir = "${cloneDir}/spring-boot-app-manifests"
+                    def manifestsDir = "${cloneDir}/spring-boot-app-manifests"
 
                   
                     
-  //                   def newImageLine = "image: ${registryName}:${imageTag}"
+                    def newImageLine = "image: ${registryName}:${imageTag}"
             
-  //                   sh "sed -i 's|image:algabrizaid/maven-opa-docker-agent:latest.*|${newImageLine}|'${manifestsDir}/deployment.yml"
+                    sh "sed -i 's|image:algabrizaid/maven-opa-docker-agent:latest.*|${newImageLine}|'${manifestsDir}/deployment.yml"
         
-  //           withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+            withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
 
-  //                dir(cloneDir) {
-  //                           sh "git config user.email zaidgabri976@gmail.com"
-  //                           sh "git config user.name zaidgabri"
-  //                           sh "git add ."
-  //                           sh "git commit -m 'Update image tag in Kubernetes manifests'"
-  //                           sh "git push  git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main"
-  //                       }
-  //                   }
-  //                   sh "rm -rf ${cloneDir}"
+                 dir(cloneDir) {
+                            sh "git config user.email zaidgabri976@gmail.com"
+                            sh "git config user.name zaidgabri"
+                            sh "git add ."
+                            sh "git commit -m 'Update image tag in Kubernetes manifests'"
+                            sh "git push  git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main"
+                        }
+                    }
+                    sh  "rm -rf ${cloneDir}"
+                    }
+                    }
+}}}
+
+    // stage('Update Deployment File') {
+    //     environment {
+    //         GIT_REPO_NAME = "java-maven-sonar-argocd-helm-k8s"
+    //         GIT_USER_NAME = "zaidgabri"
+    //     }
+    //     steps {
+    //         withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+    //             sh '''
+    //                 git config user.email "zaidgabri976@gmail.com"
+    //                 git config user.name "zaidgabri"
+    //                 BUILD_NUMBER=${imageTag}
+    //                 sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+    //                 git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+    //                 git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+    //                 git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+    //             '''
+    //         }
+    //     }
+    // }
+
+
+
 
 
 
@@ -128,7 +134,6 @@ pipeline {
   //   }
   // }
 
-}
-}
+
 
 
