--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -71,14 +71,14 @@ pipeline {
             
                     sh "sed -i 's|image: algabrizaid/maven-opa-docker-agent:latest.*|${newImageLine}|' ${manifestsDir}/deployment.yml"
         
-            withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+            withCredentials([usernamePassword(credentialsId: 'git',passwordVariable: 'GIT_PASSWORD' , usernameVariable: 'GIT_USERNAME')]) {
 
                  dir(cloneDir) {
                             sh "git config user.email zaidgabri976@gmail.com"
                             sh "git config user.name zaidgabri"
                             sh "git add ."
                             sh "git commit -m 'Update image tag in Kubernetes manifests'"
-                            sh "git push  git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main"
+                            sh "git push  git push https://${GIT_USERNAME}:${GIT_PASSWORD}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main"
                         }
                     }
                     sh  "rm -rf ${cloneDir}"
