--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -78,8 +78,8 @@ pipeline {
                             sh "git config user.name zaidgabri"
                             sh "git add ."
                             sh "git commit -m 'Update image tag in Kubernetes manifests'"
-                            sh "git push  git push https://${GIT_USERNAME}:${GIT_PASSWORD}@github.com/zaidgabri/java-maven-sonar-argocd-helm-k8s.git  HEAD:main"
-                        }
+                              sh "git push https://${GIT_USERNAME}:${GIT_PASSWORD}@github.com/zaidgabri/java-maven-sonar-argocd-helm-k8s.git HEAD:main"
+                          }
                     }
                     sh  "rm -rf ${cloneDir}"
                     }
