--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: spring-boot-app
+  namespace: mciroservice-project
   labels:
     app: spring-boot-app
 spec:
