--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/service.yml
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/service.yml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: spring-boot-app-service
+  namespace: mciroservice-project
+
 spec:
   type: NodePort
   ports:
