--- a/spring-boot-app-manifests/deployment.yml
+++ b/spring-boot-app-manifests/deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: spring-boot-app
-  namespace: mciroservice-project
+  namespace: mciroservice-project
   labels:
     app: spring-boot-app
 spec:
@@ -20,3 +20,19 @@ spec:
         image: algabrizaid/maven-opa-docker-agent:latest-32
         ports:
         - containerPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: spring-boot-app-service
+  namespace: mciroservice-project
+
+spec:
+  type: NodePort
+  ports:
+  - name: http
+    port: 80
+    targetPort: 8080
+    protocol: TCP
+  selector:
+    app: spring-boot-app
