--- a/java-maven-sonar-argocd-helm-k8s/springboot-mysql-aks/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/springboot-mysql-aks/JenkinsFile
@@ -15,7 +15,7 @@ pipeline {
       steps {
         sh 'ls -ltr'
         // build the project and create a JAR file
-        sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn clean package'
+        sh 'cd java-maven-sonar-argocd-helm-k8s/springboot-mysql-aks && mvn clean package'
       }
     }
     stage('Static Code Analysis') {
@@ -24,19 +24,19 @@ pipeline {
       }
       steps {
         withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-          sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
+          sh 'cd java-maven-sonar-argocd-helm-k8s/springboot-mysql-aks && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
         }
       }
     }
     stage('Build and Push Docker Image') {
       environment {
         DOCKER_IMAGE = "algabrizaid/maven-opa-docker-agent:${imageTag}"
-        DOCKERFILE_LOCATION = "java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile"
+        DOCKERFILE_LOCATION = "java-maven-sonar-argocd-helm-k8s/springboot-mysql-aks/Dockerfile"
         REGISTRY_CREDENTIALS = credentials('dockerhub')
       }
       steps {
         script {
-            sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
+            sh 'cd java-maven-sonar-argocd-helm-k8s/springboot-mysql-aks && docker build -t ${DOCKER_IMAGE} .'
             def dockerImage = docker.image("${DOCKER_IMAGE}")
             docker.withRegistry('https://index.docker.io/v1/', "dockerhub") {
                 dockerImage.push()
@@ -69,7 +69,7 @@ pipeline {
                     
                     def newImageLine = "image: ${registryName}:${imageTag}"
             
-                    sh "sed -i 's|image: algabrizaid/maven-opa-docker-agent:latest.*|${newImageLine}|' ${manifestsDir}/deployment.yml"
+                    sh "sed -i 's|image: algabrizaid/maven-opa-docker-agent:latest.*|${newImageLine}|' ${manifestsDir}/deployment-mysql.yml"
         
             withCredentials([usernamePassword(credentialsId: 'git',passwordVariable: 'GIT_PASSWORD' , usernameVariable: 'GIT_USERNAME')]) {
 
