--- a/java-maven-sonar-argocd-helm-k8s/springboot-mysql-aks/src/main/resources/application.properties
+++ b/java-maven-sonar-argocd-helm-k8s/springboot-mysql-aks/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 logging.level.org.springframework.jdbc.core=DEBUG
 
-spring.datasource.url=jdbc:mysql://${DATABASE_HOST}:3306/${DATABASE_NAME}?serverTimezone=UTC
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:mysql://mysql-mysqlaksdemo.mysql.database.azure.com:3306/demo?useSSL=true&requireSSL=false&serverTimezone=UTC
+spring.datasource.username=myadminuser
+spring.datasource.password=zaid
 
 spring.datasource.initialization-mode=always
