--- a/spring-boot-app-manifests/deployment.yml
+++ b/spring-boot-app-manifests/deployment.yml
@@ -1,63 +1,38 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mysql-pvc
-spec:
-  resources:
-    requests:
-      storage: 256Mi
-  storageClassName: manual
-  accessModes:
-    - ReadWriteOnce
-
----
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
-  name: mysql
+  name: spring-boot-app
+  namespace: mciroservice-project
+  labels:
+    app: spring-boot-app
 spec:
+  replicas: 2
   selector:
     matchLabels:
-      app: mysql
-  serviceName: mysql
-  replicas: 1
+      app: spring-boot-app
   template:
     metadata:
       labels:
-        app: mysql
+        app: spring-boot-app
     spec:
       containers:
-        - name: mysql
-          image: mysql:8.0
-          env:
-            - name: MYSQL_ROOT_PASSWORD
-              value: ENSA2023
-          ports:
-            - containerPort: 3306
-              name: mysql
-          volumeMounts:
-            - name: mysql-initdb
-              mountPath: /docker-entrypoint-initdb.d
-            - name: mysql-persistent-storage
-              mountPath: /var/lib/mysql
-      volumes:
-        - name: mysql-initdb
-          configMap:
-            name: mysql-initdb-cm
-        - name: mysql-persistent-storage
-          persistentVolumeClaim:
-            claimName: mysql-pvc
-
+      - name: spring-boot-app
+        image: algabrizaid/maven-opa-docker-agent:latest-32
+        ports:
+        - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: spring-boot-app-service
+  namespace: mciroservice-project
+
 spec:
-  selector:
-    app: mysql
+  type: LoadBalancer
   ports:
-    - protocol: TCP
-      port: 3306
-      targetPort: 3306
-  type: LoadBalancer  # Change the service type to LoadBalancer
+  - name: http
+    port: 80
+    targetPort: 8080
+    protocol: TCP
+  selector:
+    app: spring-boot-app
