--- a/java-maven-sonar-argocd-helm-k8s/helloworld/src/main/resources/application.yml
+++ b/java-maven-sonar-argocd-helm-k8s/helloworld/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/db1
+    url: jdbc:mysql://${DB_HOST:localhost}:3306/doctordb
     username: root
     password: zaid@11
     driver-class-name: com.mysql.cj.jdbc.Driver
