--- a/spring-boot-app-manifests/deployment.yml
+++ b/spring-boot-app-manifests/deployment.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: spring-boot-app
+  name: helloworld-service-app
   namespace: mciroservice-project
   labels:
     app: spring-boot-app
@@ -17,14 +17,21 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: algabrizaid/maven-opa-docker-agent:latest-32
+        image: algabrizaid/mysql-springboot-azure:latest-32
         ports:
-        - containerPort: 8080
+        - containerPort: 8081
+        env:
+
+        - name: DB_HOST
+          valueFrom:
+            configMapKeyRef:
+               name: mysql-cm
+               key: hostname
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: spring-boot-app-service
+  name: helloworld-service-app
   namespace: mciroservice-project
 
 spec:
@@ -32,7 +39,12 @@ spec:
   ports:
   - name: http
     port: 80
-    targetPort: 8080
+    targetPort: 8081
     protocol: TCP
   selector:
     app: spring-boot-app
+
+
+
+
+
