--- a/java-maven-sonar-argocd-helm-k8s/helloworld/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/helloworld/JenkinsFile
@@ -74,6 +74,7 @@ stage('Update Deployment File') {
                     sh "git config user.email zaidgabri976@gmail.com"
                     sh "git config user.name zaidgabri"
                     sh "git add ."
+                     sh "git clean -xdf"
                     sh "git commit -m 'Update image tag in Kubernetes manifests'"
                     sh "git push https://${GIT_USERNAME}:${GIT_PASSWORD}@github.com/zaidgabri/java-maven-sonar-argocd-helm-k8s.git ${branchName}"
                 }
