--- a/java-maven-sonar-argocd-helm-k8s/helloworld/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/helloworld/JenkinsFile
@@ -77,6 +77,7 @@ stage('Update Deployment File') {
                     sh "git add ."
 
                     sh "git commit -m 'Update image tag in Kubernetes manifests'"
+                     sh "git pull"
                     sh "git push https://${GIT_USERNAME}:${GIT_PASSWORD}@github.com/zaidgabri/java-maven-sonar-argocd-helm-k8s.git ${branchName}"
                 }
             }
