--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -63,9 +63,9 @@ pipeline {
                     }
 
                    
-                    def manifestsDir = "${cloneDir}/spring-boot-app-manifests"
+                    def manifestsDir = "${cloneDir}"
 
-                  
+                  // /spring-boot-app-manifests
                     
                     def newImageLine = "image: ${registryName}:${imageTag}"
             
