--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -63,9 +63,9 @@ pipeline {
                     }
 
                    
-                    def manifestsDir = "${cloneDir}"
+                    def manifestsDir = "spring-boot-app-manifests"
 
-                  // /spring-boot-app-manifests
+                //  ${cloneDir}/
                     
                     def newImageLine = "image: ${registryName}:${imageTag}"
             
